# pythonweb_hw08

./: pyproject.toml  requierements.txt
part_1/: authors.json  cli_query.py  import_authors.py  import_quotes.py  models.py  odms.py  quotes.json
part_2/: consumer.py  models_odms.py  producer.py
